Moved services around

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,21 +46,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
     font-size: 2.8rem;
+    margin: 0.5em 0;
 }
 h2 {
     font-size: 2.1rem;
+    margin: 0.35em 0;
 }
 h3 {
     font-size: 1.7rem;
+    margin: 0.25em 0;
 }
 h4 {
     font-size: 1.4rem;
+    margin: 0.2em 0;
 }
 h5 {
     font-size: 1.2rem;
+    margin: 0;
 }
 h6 {
     font-size: 1rem;
+    margin: 0;
 }
 main {
     // padding: 128px 0 0.5rem;
@@ -72,6 +78,11 @@ main {
         text-decoration: none;
     }
 }
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating),
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
+    color: inherit;
+}
+
 // @media screen and (max-width: 992px) {
 //     main {
 //         padding-top: 64px;
@@ -314,6 +325,8 @@ header.about, header.about .navbar .dropdown-content {
     }
     li a {
         cursor: pointer;
+        text-decoration: underline;
+        font-size: 1rem;
     }
 }
 .about-us .breadcrumb li {
