--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -4,16 +4,17 @@
             <div class="nav-wrapper">
                 <div class="row">
                     <div class="col m8 l9 navbar-brand">
-                        <ul id="main-menu" class="side-nav" menu-items="mobile"></ul>
+                        <ul menu="mobile" id="main-menu" class="side-nav"></ul>
                         <a href="#" materialize="sideNav" [materializeParams]="[{closeOnClick: true, edge: 'left', menuWidth: 330}]" data-activates="main-menu" class="button-collapse">
                             <i class="material-icons">menu</i>
                         </a>
                         <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">alpha</span></a>
-                        <ul class="right hide-on-med-and-down">
+                        <ul menu="desktop_right" class="right"></ul>
+                        <!-- <ul class="right hide-on-med-and-down">
                             <li *ngFor="let navigationItem of navigationMenu, let i = index" [routerLinkActive]="['active']">
                                 <a *ngIf="navigationItem.class == 'right'" [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div class="col hide-on-small-only m4 l3 right navbar-search">
                         <form ngForm="searchForm">
@@ -28,7 +29,7 @@
                 <div class="row">
                     <div class="col s12 navbar-nav">
                         <ng2-slim-loading-bar color="rgba(0,0,0,0.1)" height="64px"></ng2-slim-loading-bar>
-                        <ul menu-items="desktop"></ul>
+                        <ul menu="desktop_main"></ul>
                     </div>
                 </div>
             </div>
