fix to top right menu

--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -9,7 +9,7 @@
                             <i class="material-icons">menu</i>
                         </a>
                         <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO <span class="version">alpha</span></a>
-                        <ul menu="desktop_right" class="right"></ul>
+                        <ul menu="desktop_right" class="right hide-on-med-and-down"></ul>
                         <!-- <ul class="right hide-on-med-and-down">
                             <li *ngFor="let navigationItem of navigationMenu, let i = index" [routerLinkActive]="['active']">
                                 <a *ngIf="navigationItem.class == 'right'" [routerLink]="navigationItem.path">{{navigationItem.title}}</a>
