Mock-up Goodmoves search page

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -6,46 +6,26 @@
             <div class="row">
                 <div class="col l10 m8 s12">
                     <h5>About SCVO</h5>
-                    <p>The Scottish Council for Voluntary Organisations is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
-                    <p><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a> |
-                        <a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a> |
-                        <a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></p>
+                    <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
+                    <p>
+                        <a class="grey-text text-lighten-3" [routerLink]="['/about-us']">About us</a>
+                        |
+                        <a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a>
+                        |
+                        <a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a>
+                        |
+                        <a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a>
+                    </p>
                 </div>
-                <!-- <div class="col s9">
-                    <h5>Information</h5>
-                    <ul class="inline">
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
-                        <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
-                    </ul>
-                </div> -->
                 <div class="col l2 m4 s12">
-                    <h5>Contact us</h5>
+                    <h5>Contact</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
                         <li><a class="grey-text text-lighten-3" href="tel:+441314748000">0131 474 8000</a></li>
-                        <!-- <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li> -->
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li>
                     </ul>
                 </div>
-                <!-- <div class="col l3">
-                    <h5>Services</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="http://goodhq.org">GoodHQ</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.fundingscotland.com">Funding Scotland</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://goodmoves.org.uk">Goodmoves</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://digital.scvo.org.uk">Digital Participation</a></li>
-                    </ul>
-                </div>
-                <div class="col l3">
-                    <h5>Related</h5>
-                    <ul>
-                        <li><a class="grey-text text-lighten-3" href="http://thirdforcenews.org.uk">Third Force News</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.3rdsectorintern.com">Third Sector Internships Scotland</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://www.saifscotland.org.uk">Scottish Accessible Information Forum</a></li>
-                        <li><a class="grey-text text-lighten-3" href="http://charter.scvo.org.uk">Scotland's Digital Participation Charter</a></li>
-                    </ul>
-                </div> -->
             </div>
             <div class="footer-copyright">
                 <div class="row">
