Removed an item from the menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,26 +46,32 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
     font-size: 2.8rem;
+    font-weight: 600;
     margin: 0.5em 0;
 }
 h2 {
     font-size: 2.1rem;
+    font-weight: 600;
     margin: 0.35em 0;
 }
 h3 {
     font-size: 1.7rem;
+    font-weight: 600;
     margin: 0.25em 0;
 }
 h4 {
     font-size: 1.4rem;
+    font-weight: 600;
     margin: 0.2em 0;
 }
 h5 {
     font-size: 1.2rem;
+    font-weight: 600;
     margin: 0;
 }
 h6 {
     font-size: 1rem;
+    font-weight: 600;
     margin: 0;
 }
 main {
@@ -76,6 +82,15 @@ main {
     }
     .card a:link, a.btn:link {
         text-decoration: none;
+    }
+    ul {
+        padding: 0 0 0 1.5rem;
+        li {
+            list-style-type: disc;
+        }
+    }
+    dd {
+        margin: 0;
     }
 }
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating),
