--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -3,29 +3,30 @@
 <div class="drupal page list" *ngIf="pages && pages.length > 0">
     <!-- <h3 class="light"><strong>Sections</strong></h3> -->
 
-    <ul *ngFor="let link of pages">
-        <li><h4 class="light"><a [routerLink]="link.path">{{link.title}}</a></h4></li>
-    </ul>
+    <dl *ngFor="let page of pages">
+        <dt><h4 class="light"><a [routerLink]="page.path" [innerHTML]="page.title"></a></h4></dt>
+        <dd *ngIf="page.field_summary" [innerHTML]="page.field_summary"></dd>
+    </dl>
 </div>
 
 <div class="drupal post list" *ngIf="posts && posts.length > 0">
     <!-- <h3 class="light"><strong>Posts</strong></h3> -->
 
     <div class="row">
-        <div class="col s12 m6" *ngFor="let blog of posts">
+        <div class="col s12 m6" *ngFor="let post of posts">
             <div class="card small sticky-action">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="{{blog.field_header_image}}" />
+                    <img class="activator" src="{{post.field_header_image}}" />
                 </div>
                 <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">{{blog.title}}<i class="material-icons right">more_vert</i></span>
+                    <span class="card-title activator grey-text text-darken-4">{{post.title}}<i class="material-icons right">more_vert</i></span>
                 </div>
                 <div class="card-action">
-                    <a [routerLink]="blog.path">Read more&hellip;</a>
+                    <a [routerLink]="post.path">Read more&hellip;</a>
                 </div>
                 <div class="card-reveal">
-                    <span class="card-title grey-text text-darken-4">{{blog.title}}<i class="material-icons right">close</i></span>
-                    <div [innerHTML]="blog.field_summary"></div>
+                    <span class="card-title grey-text text-darken-4">{{post.title}}<i class="material-icons right">close</i></span>
+                    <div [innerHTML]="post.field_summary"></div>
                 </div>
             </div>
         </div>
