--- a/src/app/components/dynamic/cms/drupal-page.component.html
+++ b/src/app/components/dynamic/cms/drupal-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!error" class="drupal page content">
-    <p class="right" *ngIf="content_nid"><a href="https://cms.scvo.org.uk/node/{{content_nid}}/edit" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit page</a></p>
+    <p class="right" *ngIf="content_nid"><a href="{{content_editLink}}" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit page</a></p>
 
     <!-- <h1 [innerHTML]="content_category" class="light category"></h1> -->
     <h1 [innerHTML]="content_title" class="light title"></h1>
