Added media centre

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -369,6 +369,10 @@ header.about, header.about .navbar .dropdown-content {
 
 // Content =====================================================================
 
+.media-centre .drupal.page.title {
+    display: none;
+}
+
 home {
     h4 {
         margin-top: 0;
