Match link colour to heading colour

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,27 +45,27 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 h1 {
-    font-size: 2.8rem;
+    font-size: 2.7rem;
     font-weight: 600;
     margin: 0.5em 0;
 }
 h2 {
-    font-size: 2.1rem;
+    font-size: 2.0rem;
     font-weight: 600;
     margin: 0.35em 0;
 }
 h3 {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     font-weight: 600;
     margin: 0.25em 0;
 }
 h4 {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 600;
     margin: 0.2em 0;
 }
 h5 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 600;
     margin: 0;
 }
@@ -178,35 +178,65 @@ header.scroll {
     transition: all 0.2s ease;
 }
 
-header, header .navbar .dropdown-content {
+header, header .navbar .dropdown-content, main .btn,
+header.about-us, header.about-us .navbar .dropdown-content, main.about-us .btn {
     background-color: #009e99;
 }
-header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content {
+main a,
+main.about-us a {
+    color: #009e99;
+}
+
+header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content, main.running-your-organisation .btn {
     background-color: #303f9f;
 }
-header.employability, header.employability .navbar .dropdown-content {
+main.running-your-organisation a {
+    color: #303f9f;
+}
+
+header.employability, header.employability .navbar .dropdown-content, main.employability .btn {
     background-color: #2e7d32;
 }
-header.services, header.services .navbar .dropdown-content {
-    background-color: #c62828;
+main.employability a {
+    color: #2e7d32;
 }
-header.events, header.events .navbar .dropdown-content {
+
+header.join-scvo, header.join-scvo .navbar .dropdown-content, main.join-scvo .btn,
+header.events.the-gathering, header.events.the-gathering .navbar .dropdown-content, main.events.the-gathering .btn,
+header.services, header.services .navbar .dropdown-content, main.services .btn {
+    background-color: #6a1b9a;
+}
+main.join-scvo a,
+main.events.the-gathering a,
+main.services a {
+    color: #6a1b9a;
+}
+
+header.events, header.events .navbar .dropdown-content, main.events .btn {
     background-color: #263238;
 }
-header.training, header.training .navbar .dropdown-content {
+main.events a {
+    color: #263238;
+}
+
+header.training, header.training .navbar .dropdown-content, main.training .btn {
     background-color: #00838f;
 }
-header.policy, header.policy .navbar .dropdown-content {
+main.training a {
+    color: #00838f;
+}
+
+header.media-centre, header.media-centre .navbar .dropdown-content, main.media-centre .btn,
+header.policy, header.policy .navbar .dropdown-content, main.policy .btn {
     background-color: #ef6c00;
 }
-header.join, header.join .navbar .dropdown-content {
-    background-color: #303f9f;
+main.media-centre a,
+main.policy a {
+    color: #ef6c00;
 }
-header.media, header.media .navbar .dropdown-content {
-    background-color: #ef6c00;
-}
-header.about, header.about .navbar .dropdown-content {
-    background-color: #c62828;
+
+a.btn {
+    color: #fff !important;
 }
 
 .row .col.navbar-nav {
