Smaller font on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,16 +93,45 @@ main {
         margin: 0;
     }
 }
+@media screen and (max-width: 992px) {
+    body {
+        font-size: 0.95rem;
+    }
+    h1 {
+        font-size: 1.9rem;
+    }
+    h2 {
+        font-size: 1.6rem;
+    }
+    h3 {
+        font-size: 1.3rem;
+    }
+    h4 {
+        font-size: 1.1rem;
+    }
+    h5 {
+        font-size: 1rem;
+    }
+    h6 {
+        font-size: 1rem;
+    }
+}
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 0.9rem;
+    }
+    h1 {
+        font-size: 1.6rem;
+    }
+    h2 {
+        font-size: 1.4rem;
+    }
+}
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating),
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
     color: inherit;
 }
 
-// @media screen and (max-width: 992px) {
-//     main {
-//         padding-top: 64px;
-//     }
-// }
 .spinner-wrapper {
     position: fixed;
     top: 45%;
