Added a redirect helper for URLs only with Drupal nid

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -131,6 +131,9 @@ main {
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
     color: inherit;
 }
+.card-panel {
+    border-radius: 0;
+}
 
 .spinner-wrapper {
     position: fixed;
