--- a/src/app/components/dynamic/search/site/elastic-results.component.html
+++ b/src/app/components/dynamic/search/site/elastic-results.component.html
@@ -13,6 +13,7 @@
                             <h5 *ngIf="result._source.title">{{result._source.title}}</h5>
                             <p *ngIf="result._source.field_subheading" [innerHTML]="result._source.field_subheading"></p>
                             <p *ngIf="result._source.field_summary" [innerHTML]="result._source.field_summary"></p>
+                            <p *ngIf="result._source.processed" [innerHTML]="result._source.processed"></p>
                             <p *ngIf="result._source.nid"><a href="/node/{{result._source.nid}}" class="btn">Open page</a></p>
                         </span>
                     </div>
