--- a/src/app/components/dynamic/search/training/elastic-results.component.html
+++ b/src/app/components/dynamic/search/training/elastic-results.component.html
@@ -61,107 +61,109 @@ result.date
 </div>
 </div>
 </div> -->
-<div class="event-results">
-    <div class="result card">
-        <div class="row card-content">
-            <div class="col s1">
-                <div class="day">
-                    Tue
+<div class="row">
+    <div class="col s12 m6 l4 event-results">
+        <div class="result card">
+            <div class="row card-content">
+                <div class="col s2">
+                    <div class="day">
+                        Tue
+                    </div>
+                    <div class="date">
+                        6 Sep
+                    </div>
                 </div>
-                <div class="date">
-                    6 Sep
+                <div class="col s8">
+                    <h4 class="title"><a [routerLink]="['/training/detail']">Managing and supervising people</a></h4>
+                    <p class="description">Glasgow, This event takes place over several days. Please see description for details</p>
                 </div>
-            </div>
-            <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/training/detail']">Managing and supervising people</a></h4>
-                <p class="description">Glasgow, This event takes place over several days. Please see description for details</p>
-            </div>
-            <div class="col s1 cost">
-                £
+                <div class="col s2 cost">
+                    £
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="event-results">
-    <div class="result card">
-        <div class="row card-content">
-            <div class="col s1">
-                <div class="day">
-                    Tue
+    <div class="col s12 m6 l4 event-results">
+        <div class="result card">
+            <div class="row card-content">
+                <div class="col s2">
+                    <div class="day">
+                        Tue
+                    </div>
+                    <div class="date">
+                        13 Sep
+                    </div>
                 </div>
-                <div class="date">
-                    13 Sep
+                <div class="col s8">
+                    <h4 class="title"><a [routerLink]="['/training/detail']">Fit for fundraising</a></h4>
+                    <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
                 </div>
-            </div>
-            <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/training/detail']">Fit for fundraising</a></h4>
-                <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
-            </div>
-            <div class="col s1 cost">
-                £
+                <div class="col s2 cost">
+                    £
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="event-results">
-    <div class="result card">
-        <div class="row card-content">
-            <div class="col s1">
-                <div class="day">
-                    Mon
+    <div class="col s12 m6 l4 event-results">
+        <div class="result card">
+            <div class="row card-content">
+                <div class="col s2">
+                    <div class="day">
+                        Mon
+                    </div>
+                    <div class="date">
+                        19 Sep
+                    </div>
                 </div>
-                <div class="date">
-                    19 Sep
+                <div class="col s8">
+                    <h4 class="title"><a [routerLink]="['/training/detail']">Building Better Governance Scotland Programme</a></h4>
+                    <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
                 </div>
-            </div>
-            <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/training/detail']">Building Better Governance Scotland Programme</a></h4>
-                <p class="description">Edinburgh, This event takes place over several days. Please see description for details</p>
-            </div>
-            <div class="col s1 cost">
-                £
+                <div class="col s2 cost">
+                    £
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="event-results">
-    <div class="result card">
-        <div class="row card-content">
-            <div class="col s1">
-                <div class="day">
-                    Mon
+    <div class="col s12 m6 l4 event-results">
+        <div class="result card">
+            <div class="row card-content">
+                <div class="col s2">
+                    <div class="day">
+                        Mon
+                    </div>
+                    <div class="date">
+                        3 Oct
+                    </div>
                 </div>
-                <div class="date">
-                    3 Oct
+                <div class="col s8">
+                    <h4 class="title"><a [routerLink]="['/training/detail']">Data protection seminar</a></h4>
+                    <p class="description">Glasgow, 10:00 - 12:30</p>
                 </div>
-            </div>
-            <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/training/detail']">Data protection seminar</a></h4>
-                <p class="description">Glasgow, 10:00 - 12:30</p>
-            </div>
-            <div class="col s1 cost">
-                FREE
+                <div class="col s2 cost">
+                    FREE
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="event-results">
-    <div class="result card">
-        <div class="row card-content">
-            <div class="col s1">
-                <div class="day">
-                    Thu
+    <div class="col s12 m6 l4 event-results">
+        <div class="result card">
+            <div class="row card-content">
+                <div class="col s2">
+                    <div class="day">
+                        Thu
+                    </div>
+                    <div class="date">
+                        6 Oct
+                    </div>
                 </div>
-                <div class="date">
-                    6 Oct
+                <div class="col s8">
+                    <h4 class="title"><a [routerLink]="['/training/detail']">Get cracking on a comms plan: raising your profile</a></h4>
+                    <p class="description">Glasgow, 09:30 - 16:30</p>
                 </div>
-            </div>
-            <div class="col s10 ">
-                <h4 class="title"><a [routerLink]="['/training/detail']">Get cracking on a comms plan: raising your profile</a></h4>
-                <p class="description">Glasgow, 09:30 - 16:30</p>
-            </div>
-            <div class="col s1 cost">
-                £
+                <div class="col s2 cost">
+                    £
+                </div>
             </div>
         </div>
     </div>
