--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -4,26 +4,27 @@
             <div class="row">
             </div>
             <div class="row">
-                <div class="col l10 m8 s12">
-                    <h5>About SCVO</h5>
+                <div class="col l8 m6 s12">
+                    <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
+                    <!-- <h5>About SCVO</h5> -->
                     <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
-                    <p>
-                        <a class="grey-text text-lighten-3" [routerLink]="['/about-us']">About us</a>
-                        |
-                        <a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a>
-                        |
-                        <a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a>
-                        |
-                        <a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a>
-                    </p>
                 </div>
-                <div class="col l2 m4 s12">
-                    <h5>Contact</h5>
+                <div class="col l2 m3 s6">
+                    <!-- <h5>Contact</h5> -->
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/about-us']">About us</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/terms-and-conditions']">Terms &amp; conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/privacy-and-cookies']">Privacy &amp; cookies</a></li>
+                        <li><a class="grey-text text-lighten-3" [routerLink]="['/accessibility']">Accessibility</a></li>
+                    </ul>
+                </div>
+                <div class="col l2 m3 s6">
+                    <!-- <h5>Contact</h5> -->
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a></li>
                         <li><a class="grey-text text-lighten-3" href="tel:+441314748000">0131 474 8000</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
                         <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/SCVO1939">Facebook</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/scvotweet">Twitter</a></li>
                     </ul>
                 </div>
             </div>
