--- a/src/app/components/dynamic/cms/drupal-post.component.html
+++ b/src/app/components/dynamic/cms/drupal-post.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!error" class="drupal post content">
-    <p class="right" *ngIf="content_nid"><a href="{{content_editLink}}" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit post</a></p>
+    <p class="drupal edit link" *ngIf="content_nid"><a href="{{content_editLink}}" class="btn btn-primary"><span class="fa fa-edit"></span>&ensp;Edit post</a></p>
 
     <h1 [innerHTML]="content_title" class="light drupal post title"></h1>
 
