--- a/src/app/components/static/home.component.html
+++ b/src/app/components/static/home.component.html
@@ -1,3 +1,5 @@
+<!-- <img src="{{content_header_image}}" /> -->
+
 <div class="row">
     <h1 class="col s12 light center"><acronym title="Scottish Council for Voluntary Organisations">SCVO</acronym> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
 </div>
@@ -27,9 +29,28 @@
         </div>
     </div>
 </div>
-
-<!-- <div class="row">
-    <div class="s6 m4">
-        <h4>Blog</h4>
+<div class="row">
+    <div class="col s12 m4">
+        <div class="center promo">
+            <i class="large material-icons teal-text">favorite</i>
+            <h4 class="promo-caption teal-text">Services</h4>
+            <p class="light center">Our services help charities and third sector organisations across Scotland. From providing a payroll service to third sector organisations to creating thousands of jobs for young people across Scotland, SCVO's services make a real difference. <a href="#" class="teal-text">Find out more</a>.</p>
+        </div>
     </div>
-</div> -->
+
+    <div class="col s12 m4">
+        <div class="center promo">
+            <i class="large material-icons teal-text">thumb_up</i>
+            <h4 class="promo-caption teal-text">Employability</h4>
+            <p class="light center">At a time when unemployment is at its highest level in decades, SCVO is committed to providing jobs through employment initiatives and supporting the sector to provide work experience placements &amp; internship opportunities which help build skills. <a href="#" class="teal-text">Find out more</a>.</p>
+        </div>
+    </div>
+
+    <div class="col s12 m4">
+        <div class="center promo">
+            <i class="large material-icons teal-text">group</i>
+            <h4 class="promo-caption teal-text">Partnership</h4>
+            <p class="light center">SCVO works in partnership with the voluntary sector to advance our shared values and interests. Through lobbying and campaigning SCVO works to advance the interests of our members and the people and communities that they support. <a href="#" class="teal-text">Find out more</a>.</p>
+        </div>
+    </div>
+</div>
