Added some more tagging functionality

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -265,10 +265,12 @@ main.training a {
 }
 
 header.media-centre, header.media-centre .navbar .dropdown-content, main.media-centre .btn,
+header.tags, header.tags .navbar .dropdown-content, main.tags .btn,
 header.policy, header.policy .navbar .dropdown-content, main.policy .btn {
     background-color: #e64a19;
 }
 main.media-centre a,
+main.tags a,
 main.policy a {
     color: #e64a19;
 }
@@ -366,6 +368,7 @@ a.btn {
 .brand-logo {
     font-family: $logo-font-family;
     font-weight: 900;
+    color: #fff;
     padding-left: 3px;
     margin-top: 3px;
     position: relative;
