--- a/src/app/components/dynamic/cms/drupal-page.component.html
+++ b/src/app/components/dynamic/cms/drupal-page.component.html
@@ -22,3 +22,5 @@
     <h1 class="light drupal page error title">Page cannot be found (404)</h1>
     <p class="drupal page error title">{{error_message}}</p>
 </div>
+
+<cms-post-list></cms-post-list>
