--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -4,12 +4,12 @@
             <div class="row">
             </div>
             <div class="row">
-                <div class="col l8 m6 s12">
+                <div class="col l7 m5 s12">
                     <a [routerLink]="['/']" class="brand-logo"><img src="app/assets/images/logos/scvo-white.png" /> SCVO</a>
                     <!-- <h5>About SCVO</h5> -->
                     <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
                 </div>
-                <div class="col l2 m3 s6">
+                <div class="col l2 m3 s6 offset-m1 offset-l1">
                     <!-- <h5>Contact</h5> -->
                     <ul>
                         <li><a class="grey-text text-lighten-3" [routerLink]="['/about-us']">About us</a></li>
