--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -242,12 +242,12 @@ main.employability a {
 header.join-scvo, header.join-scvo .navbar .dropdown-content, main.join-scvo .btn,
 header.events.the-gathering, header.events.the-gathering .navbar .dropdown-content, main.events.the-gathering .btn,
 header.services, header.services .navbar .dropdown-content, main.services .btn {
-    background-color: #6a1b9a;
+    background-color: #311b92;
 }
 main.join-scvo a,
 main.events.the-gathering a,
 main.services a {
-    color: #6a1b9a;
+    color: #311b92;
 }
 
 header.events, header.events .navbar .dropdown-content, main.events .btn {
@@ -415,7 +415,8 @@ a.btn {
     li a {
         cursor: pointer;
         text-decoration: underline;
-        font-size: 1rem;
+        font-size: 1.3rem;
+        font-weight: 600;
     }
 }
 .about-us .breadcrumb li {
@@ -515,9 +516,12 @@ policy {
 // Footer ======================================================================
 
 footer {
-    padding-top: 15px;
+    padding-top: 3rem;
     small {
         font-size: 90%;
+    }
+    .row {
+        margin-bottom: 0;
     }
 }
 footer,
