--- a/src/app/components/dynamic/cms/drupal-index.component.html
+++ b/src/app/components/dynamic/cms/drupal-index.component.html
@@ -4,7 +4,7 @@
     <!-- <h3 class="light"><strong>Sections</strong></h3> -->
 
     <dl *ngFor="let page of pages">
-        <dt><h4 class="light"><a [routerLink]="page.path" [innerHTML]="page.title"></a></h4></dt>
+        <dt><h4><a [routerLink]="page.path" [innerHTML]="page.title"></a></h4></dt>
         <dd *ngIf="page.field_summary" [innerHTML]="page.field_summary"></dd>
     </dl>
 </div>
