--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,161 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:900);
 
+.spinner-wrapper {
+    position: fixed;
+    top: 40%;
+    left: 46%;
+    z-index: 1000;
+    .preloader-wrapper {
+        margin-left: -32px;
+        margin-top: -32px;
+    }
+    p {
+        text-align: center;
+    }
+    .spinner {
+        -moz-animation: rotate 10s infinite linear;
+        -webkit-animation: rotate 10s infinite linear;
+        animation: rotate 10s infinite linear;
+        position: relative;
+        display: block;
+        margin: auto;
+        width: 142px;
+        height: 142px;
+        i {
+            -moz-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+            -webkit-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+            animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+            -moz-transform-origin: 50% 100% 0;
+            -webkit-transform-origin: 50% 100% 0;
+            transform-origin: 50% 100% 0;
+            position: absolute;
+            display: inline-block;
+            top: 50%;
+            left: 50%;
+            border: solid 6px transparent;
+            border-bottom: none;
+        }
+        i:nth-child(1) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+            width: 44px;
+            height: 22px;
+            margin-top: -22px;
+            margin-left: -22px;
+            border-color: #303f9f;
+            border-top-left-radius: 36px;
+            border-top-right-radius: 36px;
+        }
+        i:nth-child(2) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+            width: 58px;
+            height: 29px;
+            margin-top: -29px;
+            margin-left: -29px;
+            border-color: #2e7d32;
+            border-top-left-radius: 42px;
+            border-top-right-radius: 42px;
+        }
+        i:nth-child(3) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+            width: 72px;
+            height: 36px;
+            margin-top: -36px;
+            margin-left: -36px;
+            border-color: #880e4f;
+            border-top-left-radius: 48px;
+            border-top-right-radius: 48px;
+        }
+        i:nth-child(4) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+            width: 86px;
+            height: 43px;
+            margin-top: -43px;
+            margin-left: -43px;
+            border-color: #4527a0;
+            border-top-left-radius: 54px;
+            border-top-right-radius: 54px;
+        }
+        i:nth-child(5) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+            width: 100px;
+            height: 50px;
+            margin-top: -50px;
+            margin-left: -50px;
+            border-color: #e64a19;
+            border-top-left-radius: 60px;
+            border-top-right-radius: 60px;
+        }
+        i:nth-child(6) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+            width: 114px;
+            height: 57px;
+            margin-top: -57px;
+            margin-left: -57px;
+            border-color: #00838f;
+            border-top-left-radius: 66px;
+            border-top-right-radius: 66px;
+        }
+        i:nth-child(7) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+            width: 128px;
+            height: 64px;
+            margin-top: -64px;
+            margin-left: -64px;
+            border-color: #e64a19;
+            border-top-left-radius: 72px;
+            border-top-right-radius: 72px;
+        }
+        i:nth-child(8) {
+            -moz-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+            -webkit-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+            animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+            width: 142px;
+            height: 71px;
+            margin-top: -71px;
+            margin-left: -71px;
+            border-color: #5d3191;
+            border-top-left-radius: 78px;
+            border-top-right-radius: 78px;
+        }
+        @-moz-keyframes rotate {
+            to {
+                -moz-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+        @-webkit-keyframes rotate {
+            to {
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+        @keyframes rotate {
+            to {
+                -moz-transform: rotate(360deg);
+                -ms-transform: rotate(360deg);
+                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
+            }
+        }
+    }
+}
+
+
 // Base variables ==============================================================
 
 $logo-font-family: "Lato", "Arial", sans-serif;
@@ -141,21 +296,6 @@ main {
     border-radius: 0;
 }
 
-.spinner-wrapper {
-    position: fixed;
-    top: 45%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
-    .preloader-wrapper {
-        margin-left: -32px;
-        margin-top: -32px;
-    }
-    p {
-        margin-left: -29px;
-    }
-}
 .btn, .btn:hover,
 .z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
     box-shadow: none;
@@ -240,14 +380,20 @@ main.employability a {
 }
 
 header.join-scvo, header.join-scvo .navbar .dropdown-content, main.join-scvo .btn,
-header.events.the-gathering, header.events.the-gathering .navbar .dropdown-content, main.events.the-gathering .btn,
 header.services, header.services .navbar .dropdown-content, main.services .btn {
-    background-color: #311b92;
+    background-color: #880e4f;
 }
 main.join-scvo a,
 main.events.the-gathering a,
 main.services a {
-    color: #311b92;
+    color: #880e4f;
+}
+
+header.events.the-gathering, header.events.the-gathering .navbar .dropdown-content, main.events.the-gathering .btn {
+    background-color: #4527a0;
+}
+main.events.the-gathering a {
+    color: #4527a0;
 }
 
 header.events, header.events .navbar .dropdown-content, main.events .btn {
